fix: add full bleed

--- a/packages/components/bolt-banner/src/banner.scss
+++ b/packages/components/bolt-banner/src/banner.scss
@@ -16,6 +16,7 @@
 
 .c-bolt-banner {
   @include bolt-padding(medium, squished);
+  @include bolt-full-bleed;
   display: block;
 }
 
